# leak-data-importer

./: .env.example  .gitignore  AGENTS.md  AGENT_ROLES.md  Agent-Init.md  DEVELOPMENT_STANDARDS.md  Dockerfile  HANDOFF_SCHEMA.md  IMPLEMENTATION_PLAN_PHASE2.md  IMPLEMENTATION_PLAN_PHASE3.md  IMPLEMENTATION_PLAN_PHASE5.md  LICENSE  PROJECT_CONTEXT.md  PROMPT_COMPRESSION_GUIDE.md  README.md  SELF_IMPROVEMENT_LOG.md  SPRINTPLAN.md  TODO.md  TODO_PHASE4_CODER.md  TODO_PHASE5_CODER.md  TOOLS_REGISTRY.md  agentic_loop_config.yaml  alembic.ini  coder_prompt.md  cycle_tracker.json  debugger_prompt.md  docker-compose.yml  handoff_coder_to_tester.json  handoff_coder_to_tester_cycle5.json  handoff_coder_to_tester_cycle6.json  handoff_coder_to_tester_phase4.json  handoff_debugger_to_reviewer.json  handoff_debugger_to_reviewer_cycle5.json  handoff_debugger_to_reviewer_phase4.json  handoff_orchestrator_to_coder.json  handoff_orchestrator_to_coder_cycle2.json  handoff_orchestrator_to_coder_cycle3.json  handoff_orchestrator_to_coder_cycle4.json  handoff_orchestrator_to_coder_cycle5.json  handoff_orchestrator_to_coder_cycle6.json  (+21 more)
.context/: PROJECT_CONTEXT.md
agentic_loop_template/: AGENTIC_LOOP_README.md  AGENT_ROLES.md  Agent-Init.md  Agent-Init.ps1  DEVELOPMENT_STANDARDS.md  HANDOFF_SCHEMA.md  README.md  SPRINTPLAN_TEMPLATE.md  SYSTEM_PROMPT.md  TOOLS_REGISTRY.md  setup_env.ps1  setup_env_template.ps1
agentless_loop/: README.md  SOLVER_LOOP.md
app/: streamlit_app.py
db/: schema.sql
docs/: AGENTIC_DEVELOPMENT_LOOP_PROMPT.md  ENTITY_MODEL.md  MiniMax2.5_agent_tools.md  PII_SAFETY.md
memory/: Invoke-AgenticMemory.ps1  README.md  __init__.py  schema.py  workspace.py
migrations/: env.py  script.py.mako
scripts/: lint.ps1  (+4 more)
(+78 files in other folders)
